force-app/main/default/objects/Series__c/Series__c.object-meta.xml
<CustomObject>
    <description>It defines the Series Information. Each year&apos;s Edition will be tied to a particular Series.</description>
    <label>Series</label>
    <nameField>
        <label>Series Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>