force-app/main/default/objects/Series__c/fields/Active_VAT_Tax_Alt_Currency__c.field-meta.xml
<CustomField>
    <fullName>Active_VAT_Tax_Alt_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if VAT/Tax Alternate Country Currency is used for Tax Calculation.</description>
    <inlineHelpText>True if VAT/Tax Alternate Country Currency is used for Tax Calculation.</inlineHelpText>
    <label>Active VAT/Tax Local Exchange Rate</label>
    <type>Checkbox</type>
</CustomField>