force-app/main/default/objects/Series__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Brand of Series</description>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Series</relationshipLabel>
    <relationshipName>Event_Series</relationshipName>
    <type>Lookup</type>
</CustomField>