force-app/main/default/objects/Series__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Series</description>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>