force-app/main/default/objects/Series__c/fields/Event_Specific_Skills__c.field-meta.xml
<CustomField>
    <fullName>Event_Specific_Skills__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you check this, make sure that you have event - specific skills on skill mapping.</inlineHelpText>
    <label>Event Specific Skills</label>
    <type>Checkbox</type>
</CustomField>