force-app/main/default/objects/Series__c/fields/Informa_Branch__c.field-meta.xml
<CustomField>
    <fullName>Informa_Branch__c</fullName>
    <description>Informa Branch Code.</description>
    <label>Informa Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE006</fullName>
            </value>
            <value>
                <fullName>AE09</fullName>
            </value>
            <value>
                <fullName>BR010</fullName>
            </value>
            <value>
                <fullName>BR016</fullName>
            </value>
            <value>
                <fullName>CA008</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>EG05</fullName>
            </value>
            <value>
                <fullName>GB157</fullName>
            </value>
            <value>
                <fullName>GB262</fullName>
            </value>
            <value>
                <fullName>IC01</fullName>
            </value>
            <value>
                <fullName>IN006</fullName>
            </value>
            <value>
                <fullName>IN23</fullName>
            </value>
            <value>
                <fullName>Irving</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>SA02</fullName>
            </value>
            <value>
                <fullName>SG01</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US072</fullName>
            </value>
            <value>
                <fullName>US077</fullName>
            </value>
            <value>
                <fullName>US082</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>