force-app/main/default/objects/Series__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Legal Entity for Series.</description>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Series</relationshipLabel>
    <relationshipName>Event_Series</relationshipName>
    <type>Lookup</type>
</CustomField>