force-app/main/default/objects/Series__c/fields/Legal_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Code__c</fullName>
    <description>Legal Entity Code</description>
    <label>Legal Entity Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>