force-app/main/default/objects/Series__c/fields/Legal_Entity_Domestic_Currency__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Domestic_Currency__c</fullName>
    <description>Local Currency of Legal Entity.</description>
    <label>Legal Entity Domestic Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>SAR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
                <isActive>false</isActive>
                <label>GBP</label>
            </value>
            <value>
                <fullName>USD</fullName>
                <isActive>false</isActive>
                <label>USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>