force-app/main/default/objects/Series__c/fields/LegalEntityCode__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityCode__c</fullName>
    <description>Legal Entity Code, such as GB157</description>
    <label>Legal Entity Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>