force-app/main/default/objects/Series__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field stores id of associated Brand.</description>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Markets</relationshipLabel>
    <relationshipName>Event_Series</relationshipName>
    <type>Lookup</type>
</CustomField>