force-app/main/default/objects/Series__c/fields/Measuremen__c.field-meta.xml
<CustomField>
    <fullName>Measuremen__c</fullName>
    <description>Measurement Unit for booth area.</description>
    <label>Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meters</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Inches</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>