force-app/main/default/objects/Series__c/fields/Not_By_pass_Local_Template__c.field-meta.xml
<CustomField>
    <fullName>Not_By_pass_Local_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked then Local language Conga templates will be used.</description>
    <label>Not By pass Local Template</label>
    <type>Checkbox</type>
</CustomField>