force-app/main/default/objects/Series__c/fields/Series_Code__c.field-meta.xml
<CustomField>
    <fullName>Series_Code__c</fullName>
    <description>Series Code.</description>
    <label>Series Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>