force-app/main/default/objects/Series__c/fields/Series_Director__c.field-meta.xml
<CustomField>
    <fullName>Series_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Series Director</description>
    <label>Series Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Series</relationshipName>
    <type>Lookup</type>
</CustomField>