force-app/main/default/objects/Series__c/fields/Series_Website__c.field-meta.xml
<CustomField>
    <fullName>Series_Website__c</fullName>
    <description>Website URL of Series.</description>
    <label>Series Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>