force-app/main/default/objects/Series__c/fields/Show_Email__c.field-meta.xml
<CustomField>
    <fullName>Show_Email__c</fullName>
    <description>Show Email of Series</description>
    <label>Show Email</label>
    <type>Email</type>
</CustomField>