force-app/main/default/objects/Series__c/fields/Statement_Billing__c.field-meta.xml
<CustomField>
    <fullName>Statement_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this event need a statement, in addition to an invoice?</description>
    <inlineHelpText>Does this event need a statement, in addition to an invoice?</inlineHelpText>
    <label>Statement Billing</label>
    <type>Checkbox</type>
</CustomField>