force-app/main/default/objects/Series__c/fields/TRN_CODE__c.field-meta.xml
<CustomField>
    <fullName>TRN_CODE__c</fullName>
    <description>For Dubai TRN Logic</description>
    <inlineHelpText>For Dubai Events</inlineHelpText>
    <label>TRN CODE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRN-India</fullName>
            </value>
            <value>
                <fullName>TRN-Nigeria</fullName>
            </value>
            <value>
                <fullName>TRN-UAE</fullName>
            </value>
            <value>
                <fullName>TRN-UK</fullName>
            </value>
            <value>
                <fullName>TRN-Singapore</fullName>
            </value>
            <value>
                <fullName>TRN-Egypt005</fullName>
            </value>
            <value>
                <fullName>TRN-Egypt003/4/6</fullName>
            </value>
            <value>
                <fullName>TRN-SouthAfrica</fullName>
            </value>
            <value>
                <fullName>TRN-Saudi Arabia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>