force-app/main/default/objects/Series__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Series (e.g. Conference, Digital etc.)</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exposition</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>