force-app/main/default/objects/Series__c/fields/Usual_Venue__c.field-meta.xml
<CustomField>
    <fullName>Usual_Venue__c</fullName>
    <description>Default venue for all editions of series but can be changed at edition based.</description>
    <label>Usual Venue</label>
    <type>TextArea</type>
</CustomField>