force-app/main/default/objects/Series__c/fields/VAT_Tax_Alt_Currency__c.field-meta.xml
<CustomField>
    <fullName>VAT_Tax_Alt_Currency__c</fullName>
    <description>This is VAT/Tax Alternate Country Currency Used for Tax calculation on Invoice.</description>
    <inlineHelpText>This is VAT/Tax Alternate Country Currency Used for Tax calculation on Invoice.</inlineHelpText>
    <label>VAT/Tax Local Exchange Rate Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>